<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.fayf_android002.MainActivity"
      android:id="@+id/menu_main"
        >
    <item
            android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
            android:id="@+id/action_switch_tenant"
            android:title="@string/action_switch_tenant"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_test"
            android:title="@string/action_test"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:visible="false"
            />
    <item
            android:id="@+id/action_check"
            android:title="@string/action_check"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:visible="false"
            />

    <item
            android:id="@+id/action_refresh"
            android:title="@string/action_refresh"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:visible="false"
            />

    <item
            android:id="@+id/toggle_log"
            android:title="@string/toggle_log"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:visible="false"
            />
    <!-- detail log entry -->
    <item
            android:id="@+id/action_log_details"
            android:title="@string/action_log_detail"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:visible="false"
            />
    <!-- force sort -->
    <item
            android:id="@+id/action_force_sort"
            android:title="@string/action_force_sort"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:visible="false"
            />
    <!-- report bug -->
    <item
            android:id="@+id/action_report_bug"
            android:title="@string/action_report_bug"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_contact"
            android:title="@string/action_contact"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_save"
            android:title="@string/action_save"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_load_from_web"
            android:title="@string/action_load_from_web"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="100"
            app:showAsAction="never"/>

</menu>